--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <div class="header">
-    <a href="index.html">home</a>
+    <a href="https://amandagamlen.github.io/em/">home</a>
   </div>
   <div class="header-right">
     <span><a target="_blank" href="https://soundcloud.com/topgoblin/sets/grottoe2e-1">stream</a></span>
