--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <title>top goblin</title>
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/em/assets/favicon.ico">
 </head>
 <body>
 
